syntax = "proto3";

option java_generic_services = true;

message UserRequest {
    string userId = 1;
}

message UserResponse {}


service User {
    rpc User(UserRequest) returns (UserResponse);
}